# quickfix-1

./: .gitignore  configure.ac  quickfix_vs11.sln
m4/: ax_lua.m4
spec/: Generator.rb  GeneratorLua.rb
src/: Makefile.am  quickfix.i
src/lua/: LuaApplication.h  Makefile.am  README  make_test.sh  qf_test.lua  quickfix.i  quickfix40.lua  quickfix41.lua  quickfix42.lua  quickfix43.lua  quickfix44.lua  quickfix50.lua  quickfix50sp1.lua  quickfix50sp2.lua  quickfix_fields.lua  quickfixt11.lua  settings  swig.sh  test.cpp
src/lua/quickfixlua/: quickfixlua.vcxproj  quickfixlua.vcxproj.filters
